<resources>
    <string name="app_name">StatusSaverForWhatsapp</string>
    <string name="appTitleName">StatusSaver of whatsapp</string>
    <string name="tab_text_1">Status</string>
    <string name="tab_text_2">Saved Images</string>
    <string name="tab_text_3">Saved Videos</string>
    <string name="copyright">Copyright © 2020 Paxees Inc. All rights reserved.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_found">No media found</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dialogTitle">Delete file</string>
    <string name="dialogMessage">Do you want to delete this file?</string>
    <string name="home_second">Home Second</string>
    <string name="kota_the_friend">Search Songs</string>
    <string name="audio">Audio-000Zeshana-0x</string>
    <string name="name">N1+91</string>
    <string name="password">Password</string>
    <string name="loginBtnStr">Login</string>
    <string name="forgetTxtStr">Forget Password?</string>
    <string name="facebookStr">Continue with facebook</string>
    <string name="gmailStr">Continue with Google</string>
    <string name="twitterStr">Continue with Twitter</string>
    <string name="emailStr">Email</string>
    <string name="mobileStr">Mobile No</string>
    <string name="signUpStr">"Sign Up "</string>
    <string name="watchNowStr">Watch now</string>
    <string name="preview">Preview</string>
    <string name="myList">My List</string>
    <string name="homeStr">Home</string>
    <string name="sigUpNameStr">Name</string>
    <string name="BlackMirrorStr">Black Mirror</string>
    <string name="shareStr">Share</string>
    <string name="downloadStr">Downloads</string>
    <string name="moreLikeThisStr">More Like This</string>
    <string name="descStr">Hello Kunal Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="topPicksStr">Top Picks</string>
    <string name="recentlyPlayedStr">Recently Played</string>
    <string name="trendingSongsStr">Trending Songs</string>
    <string name="videosStr">Videos</string>
    <string name="musicStr">Music</string>
    <string name="nothingInDownloadsStr">Nothing In Downloads</string>
    <string name="tellYourFreindStr">Tell your friend about zvue</string>
    <string name="copyLinkStr">Copy Link</string>
    <string name="otherStr">Other</string>
    <string name="signOutStr">Sign Out</string>
    <string name="helpStr">Help?</string>
    <string name="accountStr">Account</string>
    <string name="appSettingStr">App Setting</string>
    <string name="membershipStr">Membership Details</string>
    <string name="demoEmailStr">Email: zvue2020@gmail.com</string>
    <string name="demoPasswordStr">Password: ******</string>
    <string name="changePwdStr">Change Password</string>
    <string name="changeEmailStr">Change Email</string>
    <string name="changeNumStr">Change Number</string>
    <string name="visaStr">Visa **** **** **** 1111</string>
    <string name="updatePayInfoStr">Update payment info</string>
    <string name="billingStr">Billing Details</string>
    <string name="promoStr">Promo Code</string>
    <string name="membershipBtnStr">Memebership</string>
    <string name="VideoPlaybackStr">Video Playback</string>
    <string name="MobileDataUsageStr">Mobile Data Usage</string>
    <string name="automaticStr">Automatic</string>
    <string name="notificationStr">Reset  &amp; Notification</string>
    <string name="allowNotificationStr">Allow Notification</string>
    <string name="wifiOnlyStr">Wifi Only</string>
    <string name="downloadOnlyStr">Downlaods Quality</string>
    <string name="standardStr">Standard</string>
    <string name="legalStr">Legal</string>
    <string name="privacyPolicyStr">Privacy Policy</string>
    <string name="termsOfUseStr">Terms of Use</string>
    <string name="findHelpStr">Find Help</string>
    <string name="helpCenterStr">Help Center</string>
    <string name="UpdatePaymentMethodStr">Update Payment Method</string>
    <string name="requestAFileStr">Request A File</string>
    <string name="updatePasswordStr">Update Password</string>
    <string name="cancelAccountStr">Cancel Account</string>
    <string name="privacyStr">Privacy</string>
    <string name="contactStr">Contact\n Paxees Customer Service</string>
    <string name="videoSettingStr">Video Setting</string>
    <string name="youtTextWillBeHereStr">Your text will be here</string>
    <string name="privacyPolicyDescStr">"Hello Amit Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop "</string>
    <string name="folderLocationStr">Folder Location: Pax-StatusSaver</string>
    <string name="languageStr">Language</string>
    <string name="englishStr">English</string>
    <string name="clearCacheStr">Cache Clear</string>
    <string name="resetStr">Reset</string>
    <string name="cacheDescStr">Download folder clear</string>
    <string name="storageStr">Storage</string>
    <string name="allAppClearStr">Application Reset Setting</string>
    <string name="privacyPolicyDataStr">Status Saver Privacy Policy.\n
Generate a generic Privacy Policy and Terms &amp;amp; Conditions for your apps
Built with heart by Nishant and contributors

Twitter Github Disclaimer


Free privacy policy hosting + website for Status Saver.

Powered by Flycricket
All Done!
Now sit back and choose the type of document you want to generate:




The accuracy of the generated privacy policy and terms &amp; conditions on this website is not legally binding. Use at your own risk.

Read the full Disclaimer here

If you appreciate my work, consider buying me a cup of ☕ to keep me recharged 🤗


Privacy Policy
Paxees Technologies built the Status Saver app as a Free app. This SERVICE is provided by Paxees Technologies at no cost and is intended for use as is.

This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.

If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Status Saver unless otherwise defined in this Privacy Policy.

Information Collection and Use

For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to Status Saver contains user internal information. The information that we request will be retained by us and used as described in this privacy policy.

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app

Google Play Services
AdMob
Log Data

We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.

Cookies

Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.

This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use /"cookies.”/ to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

Service Providers

We may employ third-party companies and individuals due to the following reasons:

To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

Security

We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.

Links to Other Sites

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

Children’s Privacy

These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.

Changes to This Privacy Policy

We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page.

This policy is effective as of 2020-07-25

Contact Us

If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at info.paxees@gmail.com.\n\n</string>
    <string name="contactDetailStr">Contact Details</string>
    <string name="phoneNumberStr">+92 (021) 203-0258</string>
    <string name="emailAddressStr">Email Address</string>
    <string name="emailAddressValueStr">info.paxees@gmail.com</string>
    <string name="supportEmailStr">Support Service Center</string>
    <string name="supportEmailAddressValueStr">support.paxees@gmail.com</string>
    <string name="ratingStr">Rating &amp; Review</string>
    <string name="paxeesTechStr">Paxees Technologies Inc.</string>
    <string name="bannerID">ca-app-pub-7725725304227392/1745618942</string>
</resources>