<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Black">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:scrollbarSize="@dimen/_1ssp"
        android:scrollbarThumbVertical="@android:color/darker_gray"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/settingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5ssp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/helpBackBtn"
                    android:layout_width="@dimen/_30ssp"
                    android:layout_height="@dimen/_30ssp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/_2ssp"
                    android:src="@drawable/ic_arrow_back_white_24dp"></ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5ssp"
                    android:fontFamily="@font/imprima"
                    android:gravity="left"
                    android:text="Help"
                    android:textColor="@color/Red"
                    android:textSize="@dimen/_30ssp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5ssp"
                    android:fontFamily="@font/imprima"
                    android:gravity="left"
                    android:text="@string/findHelpStr"
                    android:textColor="@color/White"
                    android:textSize="@dimen/_15ssp"
                    android:visibility="gone"></TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_5ssp"
                    android:layout_marginLeft="@dimen/_5ssp"
                    android:layout_marginRight="@dimen/_5ssp"
                    android:background="@drawable/bottom_line"
                    android:backgroundTint="@color/White"></View>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settingMainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settingLayout"
                android:layout_margin="@dimen/_5ssp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5ssp"
                    android:drawableTint="@color/Gray"
                    android:fontFamily="@font/imprima"
                    android:gravity="left"
                    android:text="@string/contactDetailStr"
                    android:textColor="@color/White"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"></TextView>

                <LinearLayout
                    android:id="@+id/callNumberID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/setting_button_clicks"
                    android:padding="@dimen/_3ssp"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="@dimen/_20ssp"
                        android:layout_height="@dimen/_20ssp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/_2ssp"
                        android:src="@drawable/ic_local_phone_black_24dp"
                        android:tint="@color/Green"></ImageView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_5ssp"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/imprima"
                            android:gravity="left"
                            android:text="@string/phoneNumberStr"
                            android:textColor="@color/LightGreen"
                            android:textSize="@dimen/_13ssp"
                            android:textStyle="bold"></TextView>
                    </LinearLayout>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchBtnNotification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:gravity="center_vertical"
                        android:visibility="gone"
                        app:thumbTint="@color/Red"
                        app:trackTint="@color/LightRed"></androidx.appcompat.widget.SwitchCompat>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/officialEmailID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2ssp"
                    android:background="@drawable/setting_button_clicks"
                    android:padding="@dimen/_3ssp"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="@dimen/_20ssp"
                        android:layout_height="@dimen/_20ssp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/_2ssp"
                        android:src="@drawable/ic_email_black_24dp"
                        android:tint="@color/LightRed"></ImageView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_5ssp"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/imprima"
                            android:gravity="left"
                            android:text="@string/emailAddressStr"
                            android:textColor="@color/LightRed"
                            android:textSize="@dimen/_13ssp"
                            android:textStyle="bold"></TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/imprima"
                            android:gravity="left"
                            android:text="@string/emailAddressValueStr"
                            android:textColor="@color/Red"
                            android:textSize="@dimen/_10ssp"></TextView>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/supportEmailID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2ssp"
                    android:background="@drawable/setting_button_clicks"
                    android:padding="@dimen/_3ssp"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="@dimen/_20ssp"
                        android:layout_height="@dimen/_20ssp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/_2ssp"
                        android:src="@drawable/ic_email_black_24dp"
                        android:tint="@color/LightRed"></ImageView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_5ssp"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/imprima"
                            android:gravity="left"
                            android:text="@string/supportEmailStr"
                            android:textColor="@color/LightRed"
                            android:textSize="@dimen/_13ssp"
                            android:textStyle="bold"></TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/imprima"
                            android:gravity="left"
                            android:text="@string/supportEmailAddressValueStr"
                            android:textColor="@color/Red"
                            android:textSize="@dimen/_10ssp"></TextView>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5ssp"
                    android:drawableTint="@color/Gray"
                    android:fontFamily="@font/imprima"
                    android:gravity="left"
                    android:text="@string/legalStr"
                    android:textColor="@color/White"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"></TextView>

                <LinearLayout
                    android:id="@+id/privacyPolicyBtnHelpID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/setting_button_clicks"
                    android:padding="@dimen/_3ssp"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="@dimen/_20ssp"
                        android:layout_height="@dimen/_20ssp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/_2ssp"
                        android:src="@drawable/ic_priority_high_black_24dp"
                        android:tint="@color/Blue"></ImageView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/imprima"
                            android:gravity="left"
                            android:text="@string/privacyPolicyStr"
                            android:textColor="@color/Blue"
                            android:textSize="@dimen/_13ssp"
                            android:textStyle="bold"></TextView>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="@dimen/_30ssp"
                        android:layout_height="@dimen/_30ssp"
                        android:layout_gravity="right|center_vertical"
                        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"></ImageView>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ratingAndReviewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2ssp"
                    android:background="@drawable/setting_button_clicks"
                    android:padding="@dimen/_3ssp"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="@dimen/_20ssp"
                        android:layout_height="@dimen/_20ssp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/_2ssp"
                        android:src="@drawable/ic_rate_review_black_24dp"
                        android:tint="@color/Blue"></ImageView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/imprima"
                            android:gravity="left"
                            android:text="@string/ratingStr"
                            android:textColor="@color/Blue"
                            android:textSize="@dimen/_13ssp"></TextView>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="@dimen/_30ssp"
                        android:layout_height="@dimen/_30ssp"
                        android:layout_gravity="right|center_vertical"
                        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"></ImageView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/paxeesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settingMainLayout"
                android:layout_margin="@dimen/_5ssp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_40ssp"
                    android:layout_height="@dimen/_40ssp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/_2ssp"
                    android:src="@drawable/ic_paxees_logo"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:fontFamily="@font/imprima"
                    android:gravity="center|center_vertical"
                    android:text="@string/paxeesTechStr"
                    android:textColor="@color/White"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>
            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_below="@+id/paxeesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/bannerID"></com.google.android.gms.ads.AdView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>